apps/kube-web-view/insecure-deploy/insecure-ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: minimal-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   rules:
#   - http:
#       paths:
#       - path: /testpath
#         pathType: Prefix
#         backend:
#           service:
#             name: test
#             port:
#               number: 80
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: images-api
spec:
  ingressClassName: nginx
  rules:
  - host: rus-vote.seck8s.slurm.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: images-api
            port:
              number: 80
